kubernetes/web/hoarder/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hoarder
  labels:
    app: hoarder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoarder
  template:
    metadata:
      labels:
        app: hoarder
    spec:
      enableServiceLinks: true
      containers:
      - name: hoarder
        image: ghcr.io/hoarder-app/hoarder:release
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: hoarder-data
          mountPath: /data
      volumes:
      - name: hoarder-data
        persistentVolumeClaim:
          claimName: hoarder-data-pvc
