kubernetes/web/hoarder/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: hoarder
spec:
  selector:
    app: hoarder
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
