kubernetes/web/hoarder/ingress.yaml
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: hoarder
  namespace: web
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hoarder.efym.net`)
      kind: Rule
      middlewares:
        - name: authelia
      services:
        - name: hoarder
          port: 3000
  tls:
    secretName: efym-net-tls
